--- a/src/sass/components/_linkCard.scss
+++ b/src/sass/components/_linkCard.scss
@@ -6,7 +6,7 @@
     &:hover,
     &:focus {
         cursor: pointer;           
-        opacity: 95%;
+        opacity: 0.8;
     }
 
     img {
